Fix small compact not showing style

--- a/client/src/styles/_overwrite.module.scss
+++ b/client/src/styles/_overwrite.module.scss
@@ -61,6 +61,8 @@
     padding-block: 0;
     display: flex;
     align-items: center;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   .alignStart {
